...
        fontSize: 48,
      ),
      softWrap: true,
    );

    Widget mainMenuText = Text(
      'Listen to the questions and speak the answers\n to pass the test.',
      textAlign: TextAlign.center,
      style: TextStyle(
        color: Colors.grey[600],
        fontSize: 18,
      ),
      softWrap: true,
...
